tests/paczka1/small_fuzzy/22986572.err
Error in line 2: iOeBDkjg A205 86,8
Error in line 5: rIh A205 100,0
